--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="header">
 
-			<picture class="header-img">
+			<!--<picture class="header-img">
 			<source srcset="images/banner-mobile.jpg"
 					media="(max-width: 640px)">
 			<source srcset="images/banner-bg-tablet.jpg"
@@ -18,7 +18,7 @@
 			<source srcset="images/banner-bg.jpg"
 					media="(min-width: 1200px)">
 			<img class="header-img" src="images/banner-bg.jpg" alt="Фон">
-					</picture>
+					</picture> -->
 
 			<div class="wrapper">
 				<svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 3070 696">
@@ -45,11 +45,8 @@
 					</ul>
 				</nav>
 			</div>
-
-				<div class="header-slogan">
 					<h1 class="title">Блог о творчестве, спорте, и образе жизни</h1>
-				</div>
-  </header>
+		  </header>
 
 	<!--Сейчас в тренде-->
 	<h2 class="trends__title">Сейчас в тренде</h2>
