--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	  </article>
   
 	  <article class="posts">
-		<img class="posts-images" src="/images/last-post2.jpg" alt="Йога для начинающих в домашних условиях">
+		<img class="posts-images" src="./images/last-post2.jpg" alt="Йога для начинающих в домашних условиях">
 		<div class="blog-posts">
 		  <div class="categories">
 			<ul>
@@ -302,10 +302,10 @@
 
 		<article class="product">
 			<picture class="picture-img">
-				<source srcset="/images/shop-item-mobile1.jpg" media="(max-width: 640px)">
-				<source srcset="/images/shop-item-tablet1.jpg" media="(min-width: 641px) and (max-width: 1199px)">
-				<source srcset="/images/shop-item-desk1.jpg" media="(min-width: 1200px)">
-				<img class="product-preview" src="/images/shop-item-desk1.jpg" alt="Принты на подушках">
+				<source srcset="./images/shop-item-mobile1.jpg" media="(max-width: 640px)">
+				<source srcset="./images/shop-item-tablet1.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+				<source srcset="./images/shop-item-desk1.jpg" media="(min-width: 1200px)">
+				<img class="product-preview" src="./images/shop-item-desk1.jpg" alt="Принты на подушках">
 			</picture>
 
 						<div class="product-info">
