--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
 
 		<article class="product">
 			<picture class="picture-img">
-				<source srcset="/images/shop-item-mobile2.jpg" media="(max-width: 640px)">
-				<source srcset="/images/shop-item-tablet2.jpg" media="(min-width: 641px) and (max-width: 1199px)">
-				<source srcset="/images/shop-item-desk2.jpg" media="(min-width: 1200px)">
-				<img class="product-preview" src="/images/shop-item-desk2.jpg" alt="Кукла Зайчик">
+				<source srcset="./images/shop-item-mobile2.jpg" media="(max-width: 640px)">
+				<source srcset="./images/shop-item-tablet2.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+				<source srcset="./images/shop-item-desk2.jpg" media="(min-width: 1200px)">
+				<img class="product-preview" src="./images/shop-item-desk2.jpg" alt="Кукла Зайчик">
 			</picture>
 			<div class="product-info">
 				<h3 class="product-name">Кукла "Зайчик"</h3>
@@ -339,10 +339,10 @@
 
 		<article class="product">
 			<picture class="picture-img">
-				<source srcset="/images/shop-item-mobile3.jpg" media="(max-width: 640px)">
-				<source srcset="/images/shop-item-tablet3.jpg" media="(min-width: 641px) and (max-width: 1199px)">
-				<source srcset="/images/shop-item-desk3.jpg" media="(min-width: 1200px)">
-				<img class="product-preview" src="/images/shop-item-desk3.jpg"  alt="Шестиугольная рамка">
+				<source srcset="./images/shop-item-mobile3.jpg" media="(max-width: 640px)">
+				<source srcset="./images/shop-item-tablet3.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+				<source srcset="./images/shop-item-desk3.jpg" media="(min-width: 1200px)">
+				<img class="product-preview" src="./images/shop-item-desk3.jpg"  alt="Шестиугольная рамка">
 			</picture>
 			<div class="product-info">
 				<h3 class="product-name">Шестиугольная рамка</h3>
