--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
 <body>
 	<header class="header">
 
-		<div class="wrapper">
+				<div class="wrapper">
 				<svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 3070 696">
 					<path fill="#B59F5B" d="M485.331 135.438V696h-3.762L105.343 353.643l3.762 319.784H0V112.865h3.7623L379.988 458.984l-3.762-323.546h109.105Z"/>
 					<path fill="#fff" stroke="#E8E8E8" d="m861.808 165.967.009-.005.008-.005c41.291-26.275 86.341-37.543 138.935-37.543 52.58 0 93.88 11.261 138.94 37.548 41.32 26.295 75.13 60.101 101.42 101.42 26.28 41.293 37.55 86.343 37.55 135.169 0 48.823-11.27 93.882-37.56 138.948-26.28 45.059-60.08 75.103-101.42 101.409-41.29 26.275-86.34 37.543-138.93 37.543-48.821 0-93.878-11.263-138.943-37.548-41.335-26.305-75.126-56.348-101.41-101.404-26.287-45.063-37.551-86.355-37.554-138.927 3.76-45.089 15.032-93.909 37.553-135.204 26.304-41.331 56.348-75.12 101.402-101.401Zm-4.448 327.124c15.076 26.384 33.944 49.036 60.382 64.143 26.411 15.092 52.832 22.639 86.778 22.639 30.19 0 56.61-7.55 83.02-22.639 26.44-15.107 45.31-37.759 60.38-64.143 15.1-26.414 22.64-56.598 22.64-86.777 0-33.948-7.55-60.368-22.64-86.778-15.07-26.383-33.94-49.036-60.38-64.143-26.41-15.089-52.83-22.639-83.02-22.639-30.102 0-64.128 3.754-86.85 22.689l-.032.027c-22.552 18.793-45.184 37.652-60.278 64.066-15.095 26.415-22.639 56.598-22.639 86.778 0 30.179 7.544 60.363 22.639 86.777ZM1617.77 572.349h270.38v100.578h-371.46V135.938h363.94v100.578h-263.36v117.627h233.26v100.579h-233.26v117.627h.5ZM1834.67.5l-107.99 96.8162h-62.87L1723.39.5h111.28ZM2584.26 417.31l-176.42 247.736-168.89-232.691-.91-1.247v241.819h-100.58V114.453l269.97 386.201.41.574.41-.566 281.26-386.261v558.526h-104.34V416.036l-.91 1.274ZM3069.5 135.938v536.989h-104.34V135.938h104.34Z"/>
 				</svg>
 
-				<nav class="menu">
-					<!--<button class="menu-button js-menu-button">
-						<span class="menu-button-label">открыть меню</span>
-					</button> -->
-
-					<ul class="menu-list">
+			<nav class="menu">
+					 					<ul class="menu-list">
 						<li class="menu-list-item">
 							<a href="#0" class="menu-link">Главная</a> </li>
 						<li class="menu-list-item">
@@ -35,8 +31,39 @@
 							<a href="#0" class="menu-link">Контакты</a></li>
 					</ul>
 				</nav>
+
+		<!---Меню Гамбургер--->
+		<div class="header-burger">
+			<span class="burger-dash"></span>
+			<span class="burger-dash"></span>
+			<span class="burger-dash"></span>
 		</div>
+
+		<nav class="burger-menu">
+			<ul class="burger-list">
+				<li class="burger-list-item"> <a class="burger-link" href="/">Главная</a></li>
+				<li class="burger-list-item"><a class="burger-link" href="/">Посты</a></li>
+				<li class="burger-list-item"><a class="burger-link" href="/">Статьи</a></li>
+				<li class="burger-list-item"><a class="burger-link" href="/">Теги</a></li>
+				<li class="burger-list-item"><a class="burger-link" href="/">Темы</a></li>
+				<li class="burger-list-item"><a class="burger-link" href="/">Контакты</a></li>
+			</ul>
+		</nav>
+
+		</div>
+
 					<h1 class="title">Блог о творчестве, спорте, и образе жизни</h1>
+
+		<!--<picture class="header-img">
+        <source srcset="./images/banner-mobile.jpg"
+              media="(max-width: 640px)">
+        <source srcset="./images/banner-bg-tablet.jpg"
+              media="(min-width: 641px) and (max-width: 1199px)">
+        <source srcset="./images/banner-bg.jpg"
+              media="(min-width: 1200px)">
+        <img class="header-img" src="./images/banner-bg.jpg" alt="Фон">
+              </picture> -->
+
 	</header>
 
 	<!--Сейчас в тренде-->
@@ -295,68 +322,87 @@
 	</aside>
   </div>
 
-	<!--Products-->
-	<h2 class="products-title">Наши изделия</h2>
+	<!---Products--->
+	<article class="products">
+		<h2 class="products-title">Наши изделия</h2>
+		<div class="products-wrapper">
 
-	<div class="products">
-
-		<article class="product">
-			<picture class="picture-img">
+			<article class="products-card">
+				<picture class="products-img">
 				<source srcset="./images/shop-item-mobile1.jpg" media="(max-width: 640px)">
 				<source srcset="./images/shop-item-tablet1.jpg" media="(min-width: 641px) and (max-width: 1199px)">
 				<source srcset="./images/shop-item-desk1.jpg" media="(min-width: 1200px)">
 				<img class="product-preview" src="./images/shop-item-desk1.jpg" alt="Принты на подушках">
 			</picture>
 
-						<div class="product-info">
-				<h3 class="product-name">ПОДУШКИ НА ДИВАН</h3>
-				<p>Набор их двух подушек с модными принтами. Видео о создании <a href="0" class="product-link">здесь.</a></p>
-
-							<div class=product-button>
-								<span class="product-price">1000 ₽</span>
-							<span class="product-price-no">800 ₽</span>
-							<button class="sub-button" type="submit"> В магазин</button>
-								</div>
-			</div>
-		</article>
-
-		<article class="product">
-			<picture class="picture-img">
-				<source srcset="./images/shop-item-mobile2.jpg" media="(max-width: 640px)">
-				<source srcset="./images/shop-item-tablet2.jpg" media="(min-width: 641px) and (max-width: 1199px)">
-				<source srcset="./images/shop-item-desk2.jpg" media="(min-width: 1200px)">
-				<img class="product-preview" src="./images/shop-item-desk2.jpg" alt="Кукла Зайчик">
-			</picture>
-			<div class="product-info">
-				<h3 class="product-name">Кукла "Зайчик"</h3>
-				<p>Интерьерная рукодельная кукла, созданию которой посвящена <a href="0" class="product-link">весенняя серия постов в блоге и несколько подкастов.</a></p>
-				<div class="product-button">
-				<span class="product-price-toy">3 500 ₽</span>
-				<button class="sub-button" type="submit"> В магазин</button>
-			</div>
-			</div>
-		</article>
-
-		<article class="product">
-			<picture class="picture-img">
-				<source srcset="./images/shop-item-mobile3.jpg" media="(max-width: 640px)">
-				<source srcset="./images/shop-item-tablet3.jpg" media="(min-width: 641px) and (max-width: 1199px)">
-				<source srcset="./images/shop-item-desk3.jpg" media="(min-width: 1200px)">
-				<img class="product-preview" src="./images/shop-item-desk3.jpg"  alt="Шестиугольная рамка">
-			</picture>
-			<div class="product-info">
-				<h3 class="product-name">Шестиугольная рамка</h3>
-				<p>Необычная рамка для украшения дома из видео <a href="0" class="product-link">Как сделать рамку из подручных средств за 30 минут".</a></p>
-				<div class="product-button">
-					<span class="product-price">500 ₽</span>
-				<span class="product-price-no">400 ₽</span>
-				<button class="sub-button" type="submit"> В магазин</button>
-			</div>
-			</div>
-	</article>
+								<div class="products-info">
+					<h3 class="products-title">Подушки на диван</h3>
+					<p class="products-description">
+						Набор из двух подушек с модными принтами. Видео о создании
+						<a class="products-link" href="#0">здесь.</a>
+					</p>
+					<div class="price-button">
+						<div class="prices">
+							<div class="old-price">1000 Р</div>
+							<div class="new-price">800 Р</div>
+						</div>
+						<button class="button-shop">В магазин</button>
+					</div>
 				</div>
+			</article>
 
-		<footer class="footer">
+			<article class="products-card">
+				<picture class="product-img">
+					<source srcset="./images/shop-item-mobile2.jpg" media="(max-width: 640px)">
+					<source srcset="./images/shop-item-tablet2.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+					<source srcset="./images/shop-item-desk2.jpg" media="(min-width: 1200px)">
+					<img class="product-preview" src="./images/shop-item-desk2.jpg" alt="Кукла Зайчик">
+				</picture>
+
+								<div class="products-info">
+					<h3 class="products-title">Кукла «Зайчик»</h3>
+					<p class="products-description">
+						Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена
+						<a class="products-link" href="#0">весенняя серия постов</a> в
+						блоге и несколько подкастов.
+					</p>
+					<div class="price-button">
+						<div class="prices">
+							<div class="new-price">3500 Р</div>
+						</div>
+						<button class="button-shop">В магазин</button>
+					</div>
+				</div>
+			</article>
+
+			<aeticle class="products-card">
+				<picture class="product-img">
+					<source srcset="./images/shop-item-mobile3.jpg" media="(max-width: 640px)">
+					<source srcset="./images/shop-item-tablet3.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+					<source srcset="./images/shop-item-desk3.jpg" media="(min-width: 1200px)">
+					<img class="product-preview" src="./images/shop-item-desk3.jpg"  alt="Шестиугольная рамка">
+				</picture>
+
+								<div class="products-info">
+					<h3 class="products-title">Шестиугольная рамка</h3>
+					<p class="products-description">
+						Необычная рамка для украшения дома из видео
+						<a class="products-link" href="#0">
+							«Как сделать рамку из подручных средств за 30 минут»</a>
+					</p>
+					<div class="price-button">
+						<div class="prices">
+							<div class="old-price">500 Р</div>
+							<div class="new-price">400 Р</div>
+						</div>
+						<button class="button-shop">В магазин</button>
+					</div>
+				</div>
+			</aeticle>
+		</div>
+	</article>
+
+	 		<footer class="footer">
 	<!--<address class="social-info">
 	  <ul class="socials-wrapper">
 		<li class="socials"><a href="" class="socials-link socials-link-dribble">
@@ -370,90 +416,77 @@
 	</address> -->
 
 			<address class="social-info">
-			<svg class="socials-link socials-link-dribble" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-				<g fill="none" fill-rule="evenodd" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8" transform="translate(1 1)">
-					<circle cx="9" cy="9" r="9"/>
-					<path d="M5.4.9c2.1222 2.3565 3.7222 4.7865 4.8 7.29 1.0778 2.5035 1.8778 5.4735 2.4 8.91"/>
-					<path d="M.201 8.0853c3.4904.1103 6.5893-.4006 9.2966-1.5327C12.257 5.399 14.191 4.1147 15.3 2.7M3.6 15.3c1.8876-3.0496 4.9253-4.963 7.4854-5.748 2.8247-.866 4.3048-.6496 6.9146.2087"/>
-				</g>
-			</svg>
-				<span class="socials-text">dribble</span> <span class="visually-hidden">Социальная сеть Dribble </span>
-
-				<svg class="socials-link socials-link-pinterest" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-					 viewBox="0 0 310.05 310.05" style="enable-background:new 0 0 310.05 310.05;" xml:space="preserve">
-					<g id="XMLID_798_">
-	<path id="XMLID_799_" d="M245.265,31.772C223.923,11.284,194.388,0,162.101,0c-49.32,0-79.654,20.217-96.416,37.176
-		c-20.658,20.9-32.504,48.651-32.504,76.139c0,34.513,14.436,61.003,38.611,70.858c1.623,0.665,3.256,1,4.857,1
-		c5.1,0,9.141-3.337,10.541-8.69c0.816-3.071,2.707-10.647,3.529-13.936c1.76-6.495,0.338-9.619-3.5-14.142
-		c-6.992-8.273-10.248-18.056-10.248-30.788c0-37.818,28.16-78.011,80.352-78.011c41.412,0,67.137,23.537,67.137,61.425
-		c0,23.909-5.15,46.051-14.504,62.35c-6.5,11.325-17.93,24.825-35.477,24.825c-7.588,0-14.404-3.117-18.705-8.551
-		c-4.063-5.137-5.402-11.773-3.768-18.689c1.846-7.814,4.363-15.965,6.799-23.845c4.443-14.392,8.643-27.985,8.643-38.83
-		c0-18.55-11.404-31.014-28.375-31.014c-21.568,0-38.465,21.906-38.465,49.871c0,13.715,3.645,23.973,5.295,27.912
-		c-2.717,11.512-18.865,79.953-21.928,92.859c-1.771,7.534-12.44,67.039,5.219,71.784c19.841,5.331,37.576-52.623,39.381-59.172
-		c1.463-5.326,6.582-25.465,9.719-37.845c9.578,9.226,25,15.463,40.006,15.463c28.289,0,53.73-12.73,71.637-35.843
-		c17.367-22.418,26.932-53.664,26.932-87.978C276.869,77.502,265.349,51.056,245.265,31.772z"/>
-</g>					</svg>
-				<span class="socials-text">pinterest</span> <span class="visually-hidden">Социальная сеть Pinterest </span>
-
-				<svg class="socials-link socials-link-tumblr" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-					 viewBox="0 0 310 310" style="enable-background:new 0 0 310 310;" xml:space="preserve">
-<g id="XMLID_828_">
-	<path id="XMLID_829_" d="M249.775,236.928c-1.613-0.873-3.58-0.789-5.119,0.221c-14.15,9.295-28.469,14.007-42.557,14.007
-		c-7.678,0-14.285-1.725-20.236-5.297c-4.023-2.366-6.688-5.399-8.139-9.257c-1.107-2.978-2.43-10.9-2.43-31.739v-71.945h66.168
-		c2.762,0,5-2.239,5-5V80.818c0-2.762-2.238-5-5-5h-66.168V5c0-2.762-2.238-5-5-5h-42.684c-2.523,0-4.652,1.881-4.961,4.386
-		c-1.836,14.831-5.201,27.143-10.01,36.601c-4.744,9.381-11.141,17.526-19.018,24.216c-7.842,6.687-17.451,11.899-28.563,15.491
-		c-2.064,0.667-3.463,2.589-3.463,4.758v42.466c0,2.761,2.238,5,5,5h28.168v100.237c0,14.492,1.523,25.36,4.656,33.218
-		c3.158,7.955,8.83,15.496,16.863,22.418c7.922,6.801,17.568,12.104,28.67,15.758c10.971,3.618,23.73,5.452,37.922,5.452
-		c12.416,0,24.141-1.269,34.85-3.772c10.73-2.514,22.779-6.91,35.811-13.065c1.75-0.826,2.865-2.587,2.865-4.521v-47.314
-		C252.402,239.49,251.395,237.8,249.775,236.928z"/>
-</g>
-					</svg>
-				<span class="socials-text"><span class="visually-hidden">Социальная сеть Tumblr </span></span>
+				<ul class="socials-wrapper">
+					<li class="socials"><a href="#0" class="socials-link socials-link-dribble">
+						<span class="socials-text">dribble</span> <span class="visually-hidden">Социальная сеть Dribble </span>
+					</a></li>
+					<li class="socials"><a href="#0" class="socials-link socials-link-pinterest">
+						<span class="socials-text">pinterest</span> <span class="visually-hidden">Социальная сеть Pinterest </span></a></li>
+					<li class="socials"><a href="#0" class="socials-link socials-link-tumblr">
+						<span class="socials-text"><span class="visually-hidden">Социальная сеть Tumblr </span></span></a></li>
+				</ul>
 			</address>
 
 			<div class="copyright">
 	  <a href=""> Copyright © 2009-2019 City Blog LLC.</a>
 	       </div>
   </footer>
+  </body>
 
-,!--PopUp-->
+<!---PopUp--->
+<div class="popUp-hidden"><span class="visually-hidden">Скрываем></span>
+<div class="popup">
+	<div class="popup-container">
 
-	<div class="popup">
-		<div class="popup-container">
-			<div class="sign-up">
-				<h3 class="sign-up-title">ВАШ ФИДБЕК!</h3>
+		<form class="popup-content" action="#" method="post">
+			<div class="popup-title title">Ваш фидбек</div>
+			<div class="popup-close">
+			</div>
+			<div class="form-item">
+				<label class="form-item-option">
+					<span class="form-item-name">Как часто вы заходите на сайт?</span>
+					<select class="form-item-select">
+						<option class="form-item-option" value="everyday">Почти каждый день</option>
+						<option class="form-item-option" value="in one day">Через день</option>
+						<option class="form-item-option" value="Once a month">Раз в месяц</option>
+					</select>
+				</label>
+			</div>
 
+			<div class="form-item">
+				<span class="form-item-name">Вы подписаны на e-mail рассылку?</span>
+				<div class="form-radio-wrap">
+					<div class="form-item-radio">
+						<label class="radio-label">
+							<input type="radio" class="item-radio" name="form-item-radio">,
+							<span class="form-radio-text">Да</span>
+						</label>
+					</div>
 
-				<div class="sign-up__content">
-					<form class="sign-up__form">
-						<div class="sign-up__row">
-							<div class="sign-up__column">
-								<label class="sign-up__label" for="username">Enter your username</label>
-								<input id="username" class="sign-up__field sign-up__field_username" placeholder="e.g melnik909" name="username" required>
-							</div>
-							<div class="sign-up__column">
-								<label class="sign-up__label" for="email">Enter your email</label>
-								<input id="email" class="sign-up__field sign-up__field_email" type="email" placeholder="e.g melnik909@gmail.ru" name="email" required>
-							</div>
-						</div>
-						<div class="sign-up__row">
-							<div class="sign-up__column">
-								<label class="sign-up__label" for="password">Enter your password</label>
-								<input id="password" class="sign-up__field sign-up__field_password" type="password" placeholder="e.g fo3!bU3" name="password" required>
-							</div>
-							<div class="sign-up__column">
-								<label class="sign-up__label" for="repeat-password">Confirm your password</label>
-								<input id="repeat-password" class="sign-up__field sign-up__field_password" type="password" placeholder="e.g fo3!bU3" name="confirm-password" required>
-							</div>
-						</div>
-						<div class="sign-up__row">
-							<button class="sign-up__button"><span class="sign-up__button-label">Create account</span></button>
-						</div>
-					</form>
+					<div class="form-item-radio">
+						<label class="radio-label">
+							<input type="radio" class="item-radio" name="form-pop-radio">,
+							<span class="form-radio-text">Нет</span>
+						</label>
+					</div>
 				</div>
 			</div>
-			<button class="popup__close" type="button">Закрыть окно</button>
-		</div>
 
-  </body>
+			<div class="form-item">
+				<div class="textarea-wrap">
+					<label class="textarea-label">
+              <span class="form-item-name">Расскажите, какой контент вы хотели бы видеть
+                на нашем сайте?</span>
+						<textarea name="message" id="your-message" class="your-message" placeholder="Может, больше рецептов?"></textarea>
+					</label>
+				</div>
+			</div>
+
+			<div class="form-button">
+				<button class="form-send" type="submit">Отправить</button>
+			</div>
+		</form>
+	</div>
+</div>
+</div>
 </html>
