--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header class="header">
-				<div class="wrapper">
+				<div class="header-wrapper">
 					<div class="header-top">
 				<svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 3070 696">
 					<path fill="#B59F5B" d="M485.331 135.438V696h-3.762L105.343 353.643l3.762 319.784H0V112.865h3.7623L379.988 458.984l-3.762-323.546h109.105Z"/>
@@ -34,7 +34,7 @@
 					</div>
 
 		<!---Меню Гамбургер--->
-					<div class="burger-hidden"> </div>
+					<!---<div class="burger-hidden"> </div> > --->
 								<div class="header-burger">
 			<span class="burger-dash"></span>
 			<span class="burger-dash"></span>
@@ -51,7 +51,7 @@
 				<li class="burger-list-item"><a class="burger-link" href="/">Контакты</a></li>
 			</ul>
 		</nav>
-					</div>
+				<!---	</div>   --->
 
 					<h1 class="title">Блог о творчестве, спорте, и образе жизни</h1>
 
@@ -117,7 +117,7 @@
 	<main class="main-info">
   
 	  <article class="posts">
-		<img class="posts-images" src="images/last-post1.jpg" alt="10 мест, ради которых стоит проснуться на рассвете">
+		<img class="posts-images" src="./images/last-post1.jpg" alt="10 мест, ради которых стоит проснуться на рассвете">
   
 		<div class="blog-posts">
 		  <div class="categories">
@@ -160,7 +160,7 @@
 	  </article>
   
 	  <article class="posts">
-		<img class="posts-images" src="images/last-post3.jpg" alt="Лучшие музыкальные фестивали этого лета">
+		<img class="posts-images" src="./images/last-post3.jpg" alt="Лучшие музыкальные фестивали этого лета">
 		<div class="blog-posts">
 		  <div class="categories">
 			<ul>
@@ -180,7 +180,7 @@
 	  </article>
   
 	  <article class="posts">
-		<img class="posts-images" src="images/last-post4.jpg" alt="Наукоёмкий подход к кулинарии">
+		<img class="posts-images" src="./images/last-post4.jpg" alt="Наукоёмкий подход к кулинарии">
 		<div class="blog-posts">
 		  <div class="categories">
 			<ul>
@@ -200,7 +200,7 @@
 	  </article>
   
 	  <article class="posts">
-		<img class="posts-images" src="images/last-post5.jpg" alt="Делаем модные принты на подушках для интерьера">
+		<img class="posts-images" src="./images/last-post5.jpg" alt="Делаем модные принты на подушках для интерьера">
 		<div class="blog-posts">
 		  <div class="categories">
 			<ul>
@@ -228,7 +228,7 @@
 		<h3 class="header-sidebar">Новые посты</h3>
   
 		<article class="article-wrapper">
-		  <img class="article-pictures" src="/images/2.jpg" alt="10 мест, ради которых стоит проснуться">
+		  <img class="article-pictures" src="./images/2.jpg" alt="10 мест, ради которых стоит проснуться">
 		  <div class="article-posts">
 			<span>14 июня 2019</span>
 			<h4 class="article-titles"><a href="">10 мест, ради которых стоит проснуться</a></h4>
@@ -236,7 +236,7 @@
 		</article>
   
 		<article class="article-wrapper">
-		  <img class="article-pictures" src="images/151.jpg" alt="йога">
+		  <img class="article-pictures" src="./images/151.jpg" alt="йога">
 		  <div class="article_posts">
 			<span>14 июня 2019</span>
 			<h4 class="article-titles"><a href="">Йога для домашних</a></h4>
@@ -244,7 +244,7 @@
 		</article>
   
 		<article class="article-wrapper">
-		  <img class="article-pictures" src="images/45.jpg" alt="Как мы превратили классное место в балкон">
+		  <img class="article-pictures" src="./images/45.jpg" alt="Как мы превратили классное место в балкон">
 		  <div class="article-posts">
 			<span>14 июня 2019</span>
 			<h4 class="article-titles"><a href="">Как мы превратили классное место в балкон</a></h4>
@@ -252,7 +252,7 @@
 		</article>
   
 		<article class="article-wrapper">
-		  <img class="article-pictures" src="images/501.jpg" alt="Кулинарный подход к науке">
+		  <img class="article-pictures" src="./images/501.jpg" alt="Кулинарный подход к науке">
 		  <div class="article-posts">
 			<span>14 июня 2019</span>
 			<h4 class="article-titles"><a href="">Кулинарный подход к науке</a></h4>
@@ -260,7 +260,7 @@
 		</article>
   
 		<article class="article-wrapper">
-		  <img class="article-pictures" src="images/7.jpg" alt="Лучшие прически для распущенных волос">
+		  <img class="article-pictures" src="./images/7.jpg" alt="Лучшие прически для распущенных волос">
 		  <div class="article-posts">
 			<span>14 июня 2019</span>
 			<h4 class="article-titles"><a href="">Лучшие прически для распущенных волос</a></h4>
@@ -404,19 +404,7 @@
 	</article>
 
 	 		<footer class="footer">
-	<!--<address class="social-info">
-	  <ul class="socials-wrapper">
-		<li class="socials"><a href="" class="socials-link socials-link-dribble">
-			<span class="socials-text">dribble</span> <span class="visually-hidden">Социальная сеть Dribble </span>
-		  </a></li>
-		<li class="socials"><a href="" class="socials-link socials-link-pinterest">
-			<span class="socials-text">pinterest</span> <span class="visually-hidden">Социальная сеть Pinterest </span></a></li>
-		<li class="socials"><a href="" class="socials-link socials-link-tumblr">
-			<span class="socials-text"><span class="visually-hidden">Социальная сеть Tumblr </span></span></a></li>
-	  </ul>
-	</address> -->
-
-			<address class="social-info">
+	 			<address class="social-info">
 				<ul class="socials-wrapper">
 					<li class="socials"><a href="#0" class="socials-link socials-link-dribble">
 						<span class="socials-text">dribble</span> <span class="visually-hidden">Социальная сеть Dribble </span>
