--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</nav>
 				<!---	</div>   --->
 
-					<h1 class="title">Блог о творчестве, спорте, и образе жизни</h1>
+					<h1 class="title">Блог о творчестве, спорте и образе жизни</h1>
 
 		<!--<picture class="header-img">
         <source srcset="./images/banner-mobile.jpg"
@@ -70,7 +70,7 @@
 	<!--Сейчас в тренде-->
 	<h2 class="trend-title">Сейчас в тренде</h2>
 
-	<div class="trend">
+	<section class="trend">
 
 			<div class="trend-card trend1">
 				<div class="trend-border">
@@ -110,7 +110,7 @@
 			 	<h3 class="trend-name">СЕЙЧАС В ТРЕНДЕ: СКОЛЬКО ВИТАМИНА С В ЛИМОНАХ?</h3>
 			</div>
 		</div>
-	</div>
+	</section>
 
   <!--Left-Right--> 
   <div class="container">
