--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 				</nav>
 					</div>
 
-		<!---Меню Гамбургер--->
-					<!---<div class="burger-hidden"> </div> > --->
-								<div class="header-burger">
+		<!--Меню Гамбургер-->
+			<div class="header-burger">
 			<span class="burger-dash"></span>
 			<span class="burger-dash"></span>
 			<span class="burger-dash"></span>
@@ -51,9 +50,8 @@
 				<li class="burger-list-item"><a class="burger-link" href="/">Контакты</a></li>
 			</ul>
 		</nav>
-				<!---	</div>   --->
 
-					<h1 class="title">Блог о творчестве, спорте и образе жизни</h1>
+		<h1 class="title">Блог о творчестве, спорте и образе жизни</h1>
 
 		<!--<picture class="header-img">
         <source srcset="./images/banner-mobile.jpg"
@@ -269,7 +267,7 @@
 	  </section>
   
 	  <!--Найти-->
-	  <form class="search-box" action="">
+	  <form class="search-box" action="#">
 		<label class="search-label">
 		  <span class="visually-hidden">Поле поиска</span>
 		  <input class="search" name="Search" placeholder="Найти статью" required> </label>
@@ -281,7 +279,7 @@
 	  <!-- Рассылка-->
 	  <h3 class="header-subscribe">Рассылка</h3>
   
-	  <form class="subscribe-box" action="">
+	  <form class="subscribe-box" action="#">
 		<label class="search-box">
 		  <span class="visually-hidden">Поле рассылки</span>
 		  <input class="email" name="email" placeholder="Ваш e-mail адрес" required> </label>
@@ -323,7 +321,7 @@
 	</aside>
   </div>
 
-	<!---Products--->
+	<!--Products-->
 	<article class="products">
 		<h2 class="product-title">Наши изделия</h2>
 		<div class="products-wrapper">
@@ -376,7 +374,7 @@
 				</div>
 			</article>
 
-			<aeticle class="products-card">
+			<article class="products-card">
 				<picture class="product-img">
 					<source srcset="./images/shop-item-mobile3.jpg" media="(max-width: 640px)">
 					<source srcset="./images/shop-item-tablet3.jpg" media="(min-width: 641px) and (max-width: 1199px)">
@@ -399,9 +397,9 @@
 						<button class="button-shop">В магазин</button>
 					</div>
 				</div>
-			</aeticle>
+			</article>
 		</div>
-	</article>
+
 
 	 		<footer class="footer">
 	 			<address class="social-info">
@@ -420,9 +418,8 @@
 	  <a href=""> Copyright © 2009-2019 City Blog LLC.</a>
 	       </div>
   </footer>
-  </body>
 
-<!---PopUp--->
+<!--PopUp-->
 <div class="popUp-hidden">
 		<div class="popup">
 	<div class="popup-container">
@@ -478,4 +475,6 @@
 	</div>
 </div>
 </div>
+
+</body>
 </html>
