--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Диплом</title>
 	<link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
 	<header class="header">
@@ -322,7 +321,7 @@
   </div>
 
 	<!--Products-->
-	<article class="products">
+	<div class="products">
 		<h2 class="product-title">Наши изделия</h2>
 		<div class="products-wrapper">
 
@@ -400,7 +399,6 @@
 			</article>
 		</div>
 
-
 	 		<footer class="footer">
 	 			<address class="social-info">
 				<ul class="socials-wrapper">
@@ -420,14 +418,14 @@
   </footer>
 
 <!--PopUp-->
-<div class="popUp-hidden">
+   <div class="popUp-hidden">
 		<div class="popup">
 	<div class="popup-container">
-
 		<form class="popup-content" action="#" method="post">
 			<div class="popup-title title">Ваш фидбек</div>
 			<div class="popup-close">
 			</div>
+
 			<div class="form-item">
 				<label class="form-item-option">
 					<span class="form-item-name">Как часто вы заходите на сайт?</span>
@@ -473,8 +471,6 @@
 			</div>
 		</form>
 	</div>
-</div>
-</div>
-
-</body>
+		</div>
+ </body>
 </html>
