--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     <!--Left-Right-->
     <div class="main__sidebar">
-        <!--        Left-->
+        <!--Left-->
         <main class="main">
 
             <article class="main__post">
@@ -272,6 +272,7 @@
         <!--Right-->
         <aside class="sidebar">
             <section class="new__posts">
+
                 <h3 class="header__sidebar">Новые посты</h3>
 
                 <article class="sidebar__post">
@@ -459,7 +460,7 @@
     </section>
 
     <footer class="footer">
-        <div class="footer__container">
+<!--        <div class="footer__container">-->
             <address class="social__info">
                 <ul class="socials__wrapper">
                     <li class="socials"><a href="#" class="socials__link socials__link-dribble">
@@ -479,7 +480,8 @@
             <div class="copyright">
                 <a href=""> Copyright © 2009-2019 City Blog LLC.</a>
             </div>
-        </div>
+
+<!--        </div>-->
     </footer>
 
     <!--PopUp-->
