--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <header class="header">
         <div class="header__menu">
             <a class="header__logo" href="/"><img class="logo" src="./svg/noemi-logo.svg" alt="logo"></a>
-            <a class="header__logo-mobile" href="/"><img class="header__logo-mobile" src="./svg/noemi-logo.svg"
-                                                         alt="logo-mobile"></a>
+
 
             <nav class="menu">
                 <ul class="menu__list">
@@ -39,22 +38,13 @@
                 <span class="burger__dash"></span>
                 <span class="burger__dash"></span>
             </div>
-
-
-            <nav class="burger__menu">
-                <ul class="burger__list">
-                    <li class="burger__list-item"><a class="burger__link" href="/">Главная</a></li>
-                    <li class="burger__list-item"><a class="burger__link" href="/">Посты</a></li>
-                    <li class="burger__list-item"><a class="burger__link" href="/">Статьи</a></li>
-                    <li class="burger__list-item"><a class="burger__link" href="/">Теги</a></li>
-                    <li class="burger__list-item"><a class="burger__link" href="/">Темы</a></li>
-                    <li class="burger__list-item"><a class="burger__link" href="/">Контакты</a></li>
-                </ul>
-            </nav>
         </div>
+
+        <a class="header__logo-mobile" href="/"><img class="logo-mobile" src="./svg/noemi-logo.svg"
+                                                     alt="logo-mobile"></a>
         <div class="header__container">
             <h1 class="header__title">Блог о творчестве, спорте и образе жизни</h1>
-        </div>
+       </div>-->
     </header>
 
     <!--Сейчас в тренде-->
@@ -375,105 +365,110 @@
     <!--Products-->
     <section class="products">
 
-            <div class="products__container">
-                <h2 class="products__title">Наши изделия</h2>
-            </div>
+        <div class="products__container">
+            <h2 class="products__title">Наши изделия</h2>
+        </div>
 
-            <div class="products__container-card">
+        <div class="products__container-card">
 
-                <article class="product__card">
-                    <picture class="product__img">
-                        <source srcset="./images/shop-item-mobile1.jpg" media="(max-width: 640px)">
-                        <source srcset="./images/shop-item-tablet1.jpg"
-                                media="(min-width: 641px) and (max-width: 1200px)">
-                        <source srcset="./images/shop-item-desk1.jpg" media="(min-width: 1201px)">
-                        <img class="product__preview" src="./images/shop-item-desk1.jpg" alt="Принты на подушках">
-                    </picture>
+            <article class="product__card">
+                                <picture class="product__img">
+                    <source srcset="./images/shop-item-mobile1.jpg" media="(max-width: 640px)">
+                    <source srcset="./images/shop-item-tablet1.jpg"
+                            media="(min-width: 641px) and (max-width: 1200px)">
+                    <source srcset="./images/shop-item-desk1.jpg" media="(min-width: 1201px)">
+                    <img class="product__preview" src="./images/shop-item-desk1.jpg" alt="Принты на подушках">
+                </picture>
 
-                    <div class="product__info">
-                        <h3 class="product__title">Подушки на диван</h3>
-                        <p class="product__description">
-                            Набор из двух подушек с модными принтами. Видео о создании
-                            <a class="product__link" href="#">здесь.</a>
-                        </p>
-                        <div class="price__button">
-                            <div class="prices">
-                                <div class="old__price">1000 Р</div>
-                                <div class="new__price">800 Р</div>
-                            </div>
-                            <button class="button__shop">В магазин</button>
+                <div class="product__info">
+                    <h3 class="product__title">Подушки на диван</h3>
+                    <p class="product__description">
+                        Набор из двух подушек с модными принтами. Видео о создании
+                        <a class="product__link" href="#">здесь.</a>
+                    </p>
+                    <div class="price__button">
+                        <div class="prices">
+                            <div class="old__price">1000 Р</div>
+                            <div class="new__price">800 Р</div>
                         </div>
+                        <button class="button__shop">В магазин</button>
                     </div>
-                </article>
+                </div>
+            </article>
 
-                <article class="product__card">
-                    <picture class="product__img">
-                        <source srcset="./images/shop-item-mobile2.jpg" media="(max-width: 640px)">
-                        <source srcset="./images/shop-item-tablet2.jpg"
-                                media="(min-width: 641px) and (max-width: 1200px)">
-                        <source srcset="./images/shop-item-desk2.jpg" media="(min-width: 1201px)">
-                        <img class="product__preview" src="./images/shop-item-desk2.jpg" alt="Кукла Зайчик">
-                    </picture>
+            <article class="product__card">
+                                <picture class="product__img">
+                    <source srcset="./images/shop-item-mobile2.jpg" media="(max-width: 640px)">
+                    <source srcset="./images/shop-item-tablet2.jpg"
+                            media="(min-width: 641px) and (max-width: 1200px)">
+                    <source srcset="./images/shop-item-desk2.jpg" media="(min-width: 1201px)">
+                    <img class="product__preview" src="./images/shop-item-desk2.jpg" alt="Кукла Зайчик">
+                </picture>
 
-                    <div class="product__info">
-                        <h3 class="product__title">Кукла «Зайчик»</h3>
-                        <p class="product__description">
-                            Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена
-                            <a class="product__link" href="#">весенняя серия постов</a> в
-                            блоге и несколько подкастов.
-                        </p>
-                        <div class="price__button">
-                            <div class="prices">
-                                <div class="new__price">3500 Р</div>
-                            </div>
-                            <button class="button__shop">В магазин</button>
+                <div class="product__info">
+                    <h3 class="product__title">Кукла «Зайчик»</h3>
+                    <p class="product__description">
+                        Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена
+                        <a class="product__link" href="#">весенняя серия постов</a> в
+                        блоге и несколько подкастов.
+                    </p>
+                    <div class="price__button">
+                        <div class="prices">
+                            <div class="new__price">3500 Р</div>
                         </div>
+                        <button class="button__shop">В магазин</button>
                     </div>
-                </article>
+                </div>
+            </article>
 
-                <article class="product__card">
-                    <picture class="product__img">
-                        <source srcset="./images/shop-item-mobile3.jpg" media="(max-width: 640px)">
-                        <source srcset="./images/shop-item-tablet3.jpg"
-                                media="(min-width: 641px) and (max-width: 1200px)">
-                        <source srcset="./images/shop-item-desk3.jpg" media="(min-width: 1201px)">
-                        <img class="product__preview" src="./images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
-                    </picture>
+            <article class="product__card">
 
-                    <div class="product__info">
-                        <h3 class="product__title">Шестиугольная рамка</h3>
-                        <p class="product__description">
-                            Необычная рамка для украшения дома из видео
-                            <a class="product__link" href="#">
-                                «Как сделать рамку из подручных средств за 30 минут»</a>
-                        </p>
-                        <div class="price__button">
-                            <div class="prices">
-                                <div class="old__price">500 Р</div>
-                                <div class="new__price">400 Р</div>
-                            </div>
-                            <button class="button__shop">В магазин</button>
+                                <picture class="product__img">
+                    <source srcset="./images/shop-item-mobile3.jpg" media="(max-width: 640px)">
+                    <source srcset="./images/shop-item-tablet3.jpg"
+                            media="(min-width: 641px) and (max-width: 1200px)">
+                    <source srcset="./images/shop-item-desk3.jpg" media="(min-width: 1201px)">
+                    <img class="product__preview" src="./images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
+                </picture>
+
+                <div class="product__info">
+                    <h3 class="product__title">Шестиугольная рамка</h3>
+                    <p class="product__description">
+                        Необычная рамка для украшения дома из видео
+                        <a class="product__link" href="#">
+                            «Как сделать рамку из подручных средств за 30 минут»</a>
+                    </p>
+                    <div class="price__button">
+                        <div class="prices">
+                            <div class="old__price">500 Р</div>
+                            <div class="new__price">400 Р</div>
                         </div>
+                        <button class="button__shop">В магазин</button>
                     </div>
-                </article>
-            </div>
+                </div>
+            </article>
+        </div>
     </section>
 
     <footer class="footer">
-<!--        <div class="footer__container">-->
+        <div class="footer__container">
             <address class="social__info">
                 <ul class="socials__wrapper">
-                    <li class="socials"><a href="#" class="socials__link socials__link-dribble">
-                        <span class="socials__text">dribble</span> <span
-                            class="visually-hidden">Социальная сеть Dribble </span>
-                    </a></li>
-                    <li class="socials"><a href="#" class="socials__link socials__link-pinterest">
-                        <span class="socials__text">pinterest</span> <span
-                            class="visually-hidden">Социальная сеть Pinterest </span></a></li>
-                    <li class="socials"><a href="#" class="socials__link socials__link-tumblr">
-                        <span class="socials__text"><span
-                                class="visually-hidden">Социальная сеть Tumblr </span></span></a>
-                    </li>
+                    <li class="socials">
+                        <a href="#" class="socials__link socials__link-dribble">
+                            <span class="socials__text">dribble</span> <span
+                                class="visually-hidden">Социальная сеть Dribble </span>
+                        </a></li>
+                    <li class="socials">
+                        <a href="#" class="socials__link socials__link-pinterest">
+                            <span class="socials__text">pinterest</span> <span
+                                class="visually-hidden">Социальная сеть Pinterest </span>
+                        </a></li>
+                    <li class="socials">
+                        <a href="#" class="socials__link socials__link-tumblr">
+                            <span class="socials__text"><span
+                                    class="visually-hidden">Социальная сеть Tumblr </span></span>
+                        </a></li>
                 </ul>
             </address>
 
@@ -481,8 +476,9 @@
                 <a href=""> Copyright © 2009-2019 City Blog LLC.</a>
             </div>
 
-<!--        </div>-->
+        </div>
     </footer>
+
 
     <!--PopUp-->
     <div class="popUp__hidden">
