--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                                      alt="logo-mobile"></a>
         <div class="header__container">
             <h1 class="header__title">Блог о творчестве, спорте и образе жизни</h1>
-       </div>-->
+                     </div>-->
     </header>
 
     <!--Сейчас в тренде-->
@@ -452,6 +452,7 @@
 
     <footer class="footer">
         <div class="footer__container">
+
             <address class="social__info">
                 <ul class="socials__wrapper">
                     <li class="socials">
@@ -473,15 +474,14 @@
             </address>
 
             <div class="copyright">
-                <a href=""> Copyright © 2009-2019 City Blog LLC.</a>
+                <p>Copyright © 2009–2019 City Blog LLC.</p>
             </div>
 
-        </div>
+         </div>
     </footer>
 
-
     <!--PopUp-->
-    <div class="popUp__hidden">
+    <div class="visually-hidden">
         <div class="popup">
             <div class="popup__container">
                 <form class="popup__content" action="#" method="post">
@@ -534,11 +534,9 @@
                         <button class="form__send" type="submit">Отправить</button>
                     </div>
                 </form>
-
             </div>
         </div>
     </div>
-
 </div>
 </body>
 </html>
