--- a/index.html
+++ b/index.html
@@ -370,7 +370,6 @@
         </div>
 
         <div class="products__container-card">
-
             <article class="product__card">
                                 <picture class="product__img">
                     <source srcset="./images/shop-item-mobile1.jpg" media="(max-width: 640px)">
@@ -382,9 +381,9 @@
 
                 <div class="product__info">
                     <h3 class="product__title">Подушки на диван</h3>
-                    <p class="product__description">
+                    <p class="product__description-card1">
                         Набор из двух подушек с модными принтами. Видео о создании
-                        <a class="product__link" href="#">здесь.</a>
+                        <a class="product__link-card1" href="#">здесь.</a>
                     </p>
                     <div class="price__button">
                         <div class="prices">
