--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-<div class="page">
-
-    <header class="header">
+     <header class="header">
         <div class="header__menu">
             <a class="header__logo" href="/"><img class="logo" src="./svg/noemi-logo.svg" alt="logo"></a>
 
@@ -329,7 +327,7 @@
 
             <!-- Теги-->
             <section class="tag">
-                <h3 class="header__sidebar">Теги</h3>
+                <h3 class="tag__header-sidebar">Теги</h3>
                 <nav class="boxes">
                     <ul>
                         <li><a href="">Fashion</a></li>
@@ -370,6 +368,7 @@
         </div>
 
         <div class="products__container-card">
+
             <article class="product__card">
                                 <picture class="product__img">
                     <source srcset="./images/shop-item-mobile1.jpg" media="(max-width: 640px)">
@@ -381,9 +380,9 @@
 
                 <div class="product__info">
                     <h3 class="product__title">Подушки на диван</h3>
-                    <p class="product__description-card1">
+                    <p class="product__description-card">
                         Набор из двух подушек с модными принтами. Видео о создании
-                        <a class="product__link-card1" href="#">здесь.</a>
+                        <a class="product__link-card" href="#">здесь.</a>
                     </p>
                     <div class="price__button">
                         <div class="prices">
@@ -406,9 +405,9 @@
 
                 <div class="product__info">
                     <h3 class="product__title">Кукла «Зайчик»</h3>
-                    <p class="product__description">
+                    <p class="product__description-card">
                         Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена
-                        <a class="product__link" href="#">весенняя серия постов</a> в
+                        <a class="product__link-card" href="#">весенняя серия постов</a> в
                         блоге и несколько подкастов.
                     </p>
                     <div class="price__button">
@@ -421,7 +420,6 @@
             </article>
 
             <article class="product__card">
-
                                 <picture class="product__img">
                     <source srcset="./images/shop-item-mobile3.jpg" media="(max-width: 640px)">
                     <source srcset="./images/shop-item-tablet3.jpg"
@@ -432,10 +430,9 @@
 
                 <div class="product__info">
                     <h3 class="product__title">Шестиугольная рамка</h3>
-                    <p class="product__description">
+                    <p class="product__description-card">
                         Необычная рамка для украшения дома из видео
-                        <a class="product__link" href="#">
-                            «Как сделать рамку из подручных средств за 30 минут»</a>
+                        <a class="product__link-card" href="#">«Как сделать рамку из подручных средств за 30 минут»</a>
                     </p>
                     <div class="price__button">
                         <div class="prices">
@@ -536,6 +533,5 @@
             </div>
         </div>
     </div>
-</div>
-</body>
+ </body>
 </html>
