--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Диплом 14-06-23</title>
+    <title>Диплом 23-06-23</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -84,7 +84,7 @@
                         </ul>
 
                     </div>
-                    <div class="trend-container">
+                    <div class="trend__container">
                         <h3 class="trend__title">СЫРЫ НА КРАСИВЫХ КАРТИНКАХ ИЗ ИНТЕРНЕТА: КАКИЕ ОНИ НА ВКУС?</h3>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="trend-container">
+                    <div class="trend__container">
                         <h3 class="trend__title">СЕЙЧАС В ТРЕНДЕ: СКОЛЬКО ВИТАМИНА С В ЛИМОНАХ?</h3>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
             </article>
 
             <article class="main__post">
-                <img class="main__posts-images" src="./images/last-post3.jpg"
+                <img class="main__post-images" src="./images/last-post3.jpg"
                      alt="Лучшие музыкальные фестивали этого лета">
 
                 <div class="main__post-info">
@@ -199,6 +199,7 @@
                             </li>
                         </ul>
                     </div>
+
                     <h2 class="post__title"><a href="">Лучшие музыкальные фестивали этого лета</a></h2>
                     <div class="date__author">
                         <time class="date">10 июня 2019</time>
