--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Диплом 24-06-2023</title>
+    <title>Диплом 24-06-23</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -320,7 +320,7 @@
             <h3 class="header__subscribe">Рассылка</h3>
 
             <form class="subscribe__box" action="#">
-                <label class="search-box">
+                <label class="search__box">
                     <span class="visually-hidden">Поле рассылки</span>
                     <input class="email" name="email" placeholder="Ваш e-mail адрес" required> </label>
                 <button class="subscribe__button" type="submit"> Подписаться</button>
