--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="trend-container">
+                    <div class="trend__container">
                         <h3 class="trend__title">СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</h3>
-                    </div>
+                                             </div>
                 </div>
             </article>
 
@@ -522,7 +522,7 @@
               <span class="form__item-name">Расскажите, какой контент вы хотели бы видеть
                 на нашем сайте?</span>
                                 <textarea name="message" id="your-message" class="your-message"
-                                          placeholder="Может, больше рецептов?"></textarea>
+                                          placeholder="Может больше рецептов?"></textarea>
                             </label>
                         </div>
                     </div>
