--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Диплом 08-07-2023</title>
+    <title>Диплом 16-07-2023</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -267,7 +267,9 @@
             <article class="sidebar__post">
                 <img class="sidebar__picture" src="./images/2.jpg" alt="10 мест, ради которых стоит проснуться">
                 <div class="sidebar__post-info">
-                    <time class="date">14 июня 2019</time>
+                    <div class="date__post">
+                        <time class="date">14 июня 2019</time>
+                    </div>
                     <h4 class="sidebar__title"><a href="">10 мест, ради которых стоит проснуться</a></h4>
                 </div>
             </article>
@@ -275,7 +277,9 @@
             <article class="sidebar__post">
                 <img class="sidebar__picture" src="./images/151.jpg" alt="йога">
                 <div class="sidebar__post-info">
-                    <time class="date">14 июня 2019</time>
+                    <div class="date__post">
+                        <time class="date">14 июня 2019</time>
+                    </div>
                     <h4 class="sidebar__title"><a href="">Йога для домашних</a></h4>
                 </div>
             </article>
@@ -284,7 +288,9 @@
                 <img class="sidebar__picture" src="./images/45.jpg"
                      alt="Как мы превратили классное место в балкон">
                 <div class="sidebar__post-info">
-                    <time class="date">14 июня 2019</time>
+                    <div class="date__post">
+                        <time class="date">14 июня 2019</time>
+                    </div>
                     <h4 class="sidebar__title"><a href="">Как мы превратили классное место в балкон</a></h4>
                 </div>
             </article>
@@ -292,7 +298,9 @@
             <article class="sidebar__post">
                 <img class="sidebar__picture" src="./images/501.jpg" alt="Кулинарный подход к науке">
                 <div class="sidebar__post-info">
-                    <time class="date">14 июня 2019</time>
+                    <div class="date__post">
+                        <time class="date">14 июня 2019</time>
+                    </div>
                     <h4 class="sidebar__title"><a href="">Кулинарный подход к науке</a></h4>
                 </div>
             </article>
@@ -300,7 +308,9 @@
             <article class="sidebar__post">
                 <img class="sidebar__picture" src="./images/7.jpg" alt="Лучшие прически для распущенных волос">
                 <div class="sidebar__post-info">
-                    <time class="date">14 июня 2019</time>
+                    <div class="date__post">
+                        <time class="date">14 июня 2019</time>
+                    </div>
                     <h4 class="sidebar__title"><a href="">Лучшие прически для распущенных волос</a></h4>
                 </div>
             </article>
