--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             </article>
         </section>
 
-        <!--Найти-->
+        <!--Search-->
         <form class="search__box" action="#">
             <label class="search-label">
                 <span class="visually-hidden">Поле поиска</span>
@@ -330,7 +330,7 @@
         <h3 class="header__subscribe">Рассылка</h3>
 
         <form class="subscribe__box" action="#">
-            <label class="search__box">
+            <label class="subscribe__label">
                 <span class="visually-hidden">Поле рассылки</span>
                 <input class="email" name="email" placeholder="Ваш e-mail адрес" required> </label>
             <button class="subscribe__button" type="submit"> Подписаться</button>
